fix(about): align center text

--- a/css/_about-and-video.scss
+++ b/css/_about-and-video.scss
@@ -73,7 +73,7 @@
       margin: auto;
       max-width: 35%;
       padding: 60px 0;
-      text-align: left;
+      text-align: center;
       letter-spacing: 0;
       color: $dark-blue;
       font-size: 1.625rem;
